[project]
name = "spotify-tools"
version = "0.0.1"
authors = [
    {name = "Alex Richards", email = "alex.richards006@gmail.com"},
]
description = "Tools for interacting with the Spotify API."
keywords = [
    "spotify",
    "tools",
]
requires-python=">=3.9"
dependencies = [
    "pydantic",
    "pydantic-settings",
    "spotipy",
    "typer",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "coverage",
]
